@@ -1,0 +1,4 @@
+<tr>
+    <td>[[+id:limit=`6`]]</td>
+    <td>[[+message]]</td>
+</tr>
