@@ -1,0 +1,16 @@
+<h2>[[+repository.name]]</h2>
+<p>[[+repository.description]]</p>
+
+<h3>Recent Commits</h3>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Description</th>
+        <th>Author</th>
+   </tr>
+   </thead>
+   <tbody>
+   [[+data]]
+   </tbody>
+</table>
